# docs/swagger.json
@@ -484,7 +484,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/view.ResponseGetSocmed"
+                            "$ref": "#/definitions/view.ReturnGetSocmed"
                         }
                     },
                     "401": {
@@ -808,7 +808,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/view.ResponseRegisterUser"
                         }
                     },
                     "400": {
@@ -895,140 +895,6 @@
         }
     },
     "definitions": {
-        "models.Comment": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "photo": {
-                    "$ref": "#/definitions/models.Photo"
-                },
-                "photoId": {
-                    "type": "integer"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/models.User"
-                },
-                "userId": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.Photo": {
-            "type": "object",
-            "properties": {
-                "caption": {
-                    "type": "string"
-                },
-                "comments": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Comment"
-                    }
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "photoUrl": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/models.User"
-                },
-                "userId": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.SocialMedia": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "socialMediaUrl": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/models.User"
-                },
-                "userId": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.User": {
-            "type": "object",
-            "properties": {
-                "age": {
-                    "type": "integer"
-                },
-                "comments": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Comment"
-                    }
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "photos": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Photo"
-                    }
-                },
-                "socialMedias": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.SocialMedia"
-                    }
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
         "request.CreateCommentRequest": {
             "type": "object",
             "required": [
@@ -1323,6 +1189,12 @@
         "view.ResponseGetAllComment": {
             "type": "object",
             "properties": {
+                "Photo": {
+                    "$ref": "#/definitions/view.ResponseWithPhotoIdComment"
+                },
+                "User": {
+                    "$ref": "#/definitions/view.ResponseWithUserIdComment"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -1332,17 +1204,11 @@
                 "message": {
                     "type": "string"
                 },
-                "photo": {
-                    "$ref": "#/definitions/view.ResponseWithPhotoIdComment"
-                },
                 "photo_id": {
                     "type": "integer"
                 },
                 "updated_at": {
                     "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/view.ResponseWithUserIdComment"
                 },
                 "user_id": {
                     "type": "integer"
@@ -1352,6 +1218,9 @@
         "view.ResponseGetAllPhoto": {
             "type": "object",
             "properties": {
+                "User": {
+                    "$ref": "#/definitions/view.ResponseWithUserId"
+                },
                 "caption": {
                     "type": "string"
                 },
@@ -1369,9 +1238,6 @@
                 },
                 "updated_at": {
                     "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/view.ResponseWithUserId"
                 },
                 "user_id": {
                     "type": "integer"
@@ -1408,6 +1274,23 @@
             "type": "object",
             "properties": {
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "view.ResponseRegisterUser": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "username": {
                     "type": "string"
                 }
             }
@@ -1554,6 +1437,17 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "view.ReturnGetSocmed": {
+            "type": "object",
+            "properties": {
+                "social_medias": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/view.ResponseGetSocmed"
+                    }
                 }
             }
         }
