# server/controllers/view/comment.go
@@ -17,8 +17,8 @@ type ResponseGetAllComment struct {
 	UserId    int                        `json:"user_id"`
 	UpdatedAt time.Time                  `json:"updated_at"`
 	CreatedAt time.Time                  `json:"created_at"`
-	User      ResponseWithUserIdComment  `json:"user"`
-	Photo     ResponseWithPhotoIdComment `json:"photo"`
+	User      ResponseWithUserIdComment  `json:"User"`
+	Photo     ResponseWithPhotoIdComment `json:"Photo"`
 }
 
 type ResponseUpdateComment struct {
