# server/controllers/view/photo.go
@@ -19,7 +19,7 @@ type ResponseGetAllPhoto struct {
 	UserId    int                `json:"user_id"`
 	CreatedAt time.Time          `json:"created_at"`
 	UpdatedAt time.Time          `json:"updated_at"`
-	User      ResponseWithUserId `json:"user"`
+	User      ResponseWithUserId `json:"User"`
 }
 
 type ResponseUpdatePhoto struct {
